add download endpoint